--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <div id="app" class="container"></div>
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="http://127.0.0.1:8080/app.js"></script>
 </body>
 </html>
