--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>用户管理</title>
-    <link rel="stylesheet" href="/static/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
 </head>
 <body>
 <div id="app" class="container"></div>
-<script type="text/javascript" src="http://127.0.0.1:8080/app.js"></script>
+<script type="text/javascript" src="/app.js"></script>
 </body>
 </html>
