mongodb数据库连接

--- a/myMessage/index.html
+++ b/myMessage/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset = "UTF-8">
-    <title>React App - 菜鸟教程(runoob.com)</title>
-    <link rel="stylesheet" href="/static/bootstrap.min.css">
+    <title>留言板</title>
+    <link rel="stylesheet" href="bootstrap.min.css">
 </head>
 
 <body>
