--- a/myMessage/index.html
+++ b/myMessage/index.html
@@ -5,6 +5,7 @@
     <meta charset = "UTF-8">
     <title>留言板</title>
     <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="base.css">
 </head>
 
 <body>
