--- a/myMessage/index.html
+++ b/myMessage/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset = "UTF-8">
     <title>留言板</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="base.css">
 </head>
