--- a/myMessage/index.html
+++ b/myMessage/index.html
@@ -6,7 +6,7 @@
     <title>留言板</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="./static/base.css">
 </head>
 
 <body>
