--- a/myMessage/index.html
+++ b/myMessage/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset = "UTF-8">
-    <title>留言板</title>
+    <title>react + node 博客</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="./static/base.css">
