--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset = "UTF-8">
     <title>react + node 博客</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="./src/static/bootstrap.min.css">
+    <link rel="stylesheet" href="./src/static/base.css">
 </head>
 
 <body>
